submit guess button

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <p>Guess someone born in the year: <strong id="year">Loading...</strong></p>
 
   <input type="text" id="guessInput" placeholder="Type a name" />
-  <button id="guessButton">Submit Guess</button>
+  <button id="guessButton" onclick="checkGuess()">Submit Guess</button>
 
   <p id="result"></p>
 
