guess tracker and 5 tries

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   <input type="text" id="guessInput" placeholder="Type a name" />
   <button id="guessButton" onclick="checkGuess()">Submit Guess</button>
 
+  <div id="guesses"></div>
+
   <p id="result"></p>
 
   <script src="game.js"></script>
