--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
   <meta charset="UTF-8">
   <title>Bornle</title>
   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@500;700&family=Playfair+Display:wght@500;700&display=swap" rel="stylesheet">
 </head>
+
+
 <body>
   <h1>Bornle</h1>
   <p>Guess someone born in the year: <strong id="year">Loading...</strong></p>
@@ -13,7 +16,6 @@
   <button id="guessButton" onclick="checkGuess()">Submit Guess</button>
 
   <div id="guesses"></div>
-
   <p id="result"></p>
 
   <script src="game.js"></script>
