--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 
 <body>
   <h1>Bornle</h1>
-  <p>Guess someone born in the year: <strong id="year">Loading...</strong></p>
-
+  <h2 id="yearPrompt">Guess someone born in the year: <strong id="year">Loading...</strong></h2>
   <input type="text" id="guessInput" placeholder="Type a name" />
   <button id="guessButton" onclick="checkGuess()">Submit Guess</button>
 
