image addition for correct guess

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
   <input type="text" id="guessInput" placeholder="Type a name" />
   <button id="guessButton" onclick="checkGuess()">Submit Guess</button>
 
+  <img id="portrait" alt="Portrait" style="max-width:200px;display:block;margin:20px auto;">
+
   <div id="guesses"></div>
   <p id="result"></p>
 
