--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
   <p id="result"></p>
 
   <script src="game.js"></script>
+ <footer class="attribution">
+  <p style="font-size:0.8rem;color:#666;margin-top:40px;">
+  Data sourced from <a href="https://www.wikipedia.org/" target="_blank" rel="noopener">Wikipedia</a>.
+  Text available under <a href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank" rel="noopener">CC BY-SA 4.0</a>.
+  </footer>
+</p>
 </body>
 </html>
 
