pull bio and show after 5 guesses

--- a/index.html
+++ b/index.html
@@ -15,12 +15,14 @@
   <button id="guessButton" onclick="checkGuess()">Submit Guess</button>
 
   <img id="portrait" alt="Portrait">
-
+  <div id="bio"></div>
 
   <div id="guesses"></div>
   <p id="result"></p>
 
   <script src="game.js"></script>
+
+  
  <footer class="attribution">
   <p style="font-size:0.8rem;color:#666;margin-top:40px;">
   Data sourced from <a href="https://www.wikipedia.org/" target="_blank" rel="noopener">Wikipedia</a>.
