--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <body>
   <h1>Bornle</h1>
   <h2 id="yearPrompt">Guess someone born in the year: <strong id="year">Loading...</strong></h2>
-  <input type="text" id="guessInput" placeholder="Type a name" />
+  <input type="text" id="guessInput" list="nameSuggestions" placeholder="Start typing..." autocomplete="off">
+  <datalist id="nameSuggestions"></datalist>
   <button id="guessButton" onclick="checkGuess()">Submit Guess</button>
 
   <div id="guesses"></div>
