updated index to reference correct js

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   
   <p id="result"></p>
 
-  <script src="gamecopy.js"></script>
+  <script src="game.js"></script>
 
   <button id="shareButton" style="display:none;">Share Your Result</button>
  <footer class="attribution">
