--- a/indexv2.html
+++ b/indexv2.html
@@ -11,13 +11,8 @@
 <body>
   <h1>Bornle</h1>
   
-  <div id="periodWrap">
-    <span class="period-label">Period:</span>
-    <div id="periodButtons" class="period-group"></div>
-  </div>
-  
 <!--Guess UI-->
-  <h2 id="yearPrompt">Guess someone born in the year: <strong id="year">Loading...</strong></h2>
+  <h2 id="yearPrompt">Loading...</h2>
   <input type="text" id="guessInput" list="nameSuggestions" placeholder="Start typing..." autocomplete="off">
   <datalist id="nameSuggestions"></datalist>
   <button id="guessButton" onclick="checkGuess()">Submit Guess</button>
@@ -30,7 +25,7 @@
   
   <p id="result"></p>
 
-  <script src="gamecopy.js"></script>
+  <script src="bornlev2.js"></script>
 
   <button id="shareButton" style="display:none;">Share Your Result</button>
  <footer class="attribution">
